--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -9,13 +9,18 @@ jobs:
   publish:
     permissions:
       id-token: write
-    environment: pub.dev
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v1
 
-      - uses: dart-lang/setup-dart@v1
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v1
+        with:
+          channel: 'stable'
 
-      - name: Publish
+      - uses: flutter-actions/setup-pubdev-credentials@v1
+
+      - name: Publish Package
         run: flutter pub publish --force
