chore: Setup CodeCov.

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,4 +25,10 @@ jobs:
         run: flutter analyze
 
       - name: Test
-        run: flutter test test/sequence_aware_rich_text_renderer.dart
+        run: flutter test --coverage
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          file: coverage/lcov.info
